bug with relative path #45059

Closed
opened 2015-06-13 09:52:36 +02:00 by mathieu menuet · 16 comments

System Information
Win7 x64

Blender Version
Broken: 2.75RC1

Short description of error
When a .blend file is saved on for example C:\ and the image file to be loaded also on C:\ and relative path is checked, the image loading goes from 1/10th of a second to many seconds.

Exact steps for others to reproduce the error
Unpack the archive somewhere, open the .blend and load the image in folder "textures".
bug relative path same drive.7z
I just saved the default scene and the texture comes from the barcelona pavillon demo file from blender.org
Important is: .blend and image file in same logical drive but different folder. Scene must be saved (doesn't happen with a fresh start). "Relative path" has to be activated in the image loading window.

**System Information** Win7 x64 **Blender Version** Broken: 2.75RC1 **Short description of error** When a .blend file is saved on for example C:\ and the image file to be loaded also on C:\ and relative path is checked, the image loading goes from 1/10th of a second to many seconds. **Exact steps for others to reproduce the error** Unpack the archive somewhere, open the .blend and load the image in folder "textures". [bug relative path same drive.7z](https://archive.blender.org/developer/F190716/bug_relative_path_same_drive.7z) I just saved the default scene and the texture comes from the barcelona pavillon demo file from blender.org Important is: .blend and image file in same logical drive but different folder. Scene must be saved (doesn't happen with a fresh start). "Relative path" has to be activated in the image loading window.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli

Added subscribers: @MartijnBerger, @mont29

Added subscribers: @MartijnBerger, @mont29

Do you have any missing and/or remote 'virtual' drives on your machine? That kind of sounds like Windows trying to check content from some low speed (or missing) path… Remember we had similar issues with filebrowser's bookmarks.

@MartijnBerger maybe you can have a look here too?

Do you have any missing and/or remote 'virtual' drives on your machine? That kind of sounds like Windows trying to check content from some low speed (or missing) path… Remember we had similar issues with filebrowser's bookmarks. @MartijnBerger maybe you can have a look here too?
Author

@mont29 no I don't have any virtual drives. And if I uncheck "relative path" everything is responsive again.

@mont29 no I don't have any virtual drives. And if I uncheck "relative path" everything is responsive again.
Author

why is this incomplete ? Because you thought I may have some virtual drives??? Can you understand it hurts to get it many times a day after hours (yes hours) of work narrowing many bugs and then just get "incomplete" without any mentioned reason? I'm not paid nor thanked for my work so please, respect it at least. And no, I don't care if you fix it or not, I just narrowed a bug several users reported. So I'm helping in the communication process because many don't want the hassle of coming here, other don't want to report anymore and some don't know how to find a bug or don't even read your requirement. So if I'm bothering you, tell it clearly and I'll let you in peace, promised.

why is this incomplete ? Because you thought I may have some virtual drives??? Can you understand it hurts to get it many times a day after hours (yes hours) of work narrowing many bugs and then just get "incomplete" without any mentioned reason? I'm not paid nor thanked for my work so please, respect it at least. And no, I don't care if you fix it or not, I just narrowed a bug several users reported. So I'm helping in the communication process because many don't want the hassle of coming here, other don't want to report anymore and some don't know how to find a bug or don't even read your requirement. So if I'm bothering you, tell it clearly and I'll let you in peace, promised.

I’d appreciate if you left susceptibility outside of bug tracking. You may report a handful of bugs (which is greatly appreciated), but we have to handle tens of them each week here - and believe me, making a good bug report does take time, but fixing a bug can take much much more.

Also, I’d expect you understand how tracker works, being an experienced reporter as you are - this one was tagged incomplete because I asked a question, you’ve answered it, so we go back to 'normal', nothing special here, happens all the time.

And Windows-specific bugs are double pain for us, since we have no active main dev using this platform (we all have to reboot or start a painfully slow VM to investigate them).

I’d appreciate if you left susceptibility outside of bug tracking. You may report a handful of bugs (which **is** greatly appreciated), but we have to handle tens of them each week here - and believe me, making a good bug report does take time, but fixing a bug can take much much more. Also, I’d expect you understand how tracker works, being an experienced reporter as you are - this one was tagged incomplete because I asked a question, you’ve answered it, so we go back to 'normal', nothing special here, happens all the time. And Windows-specific bugs are double pain for us, since we have no active main dev using this platform (we all have to reboot or start a painfully slow VM to investigate them).
Author

ok sorry, I guess I was a bit too tired yesterday night :(

ok sorry, I guess I was a bit too tired yesterday night :(

Added subscriber: @ideasman42

Added subscriber: @ideasman42

did anyone besides original reporter manage to redo this error?

I imagine if this were a common problem, others would have reported already.

did anyone besides original reporter manage to redo this error? I imagine if this were a common problem, others would have reported already.

This issue was referenced by 364d934951

This issue was referenced by 364d934951e3a46864d6478309345a3b10e67818

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

The "//" prefix was being passed to the file system read function (which should never happen).
Guess relative paths were attempting to access a network share (causing the hang).

Added asserts so this mistake warns developers on all platforms and we don't make the same mistake again.

The "//" prefix was being passed to the file system read function (which should _never_ happen). Guess relative paths were attempting to access a network share (causing the hang). Added asserts so this mistake warns developers on all platforms and we don't make the same mistake again.
Author

thank you for believing me without other users reporting. It's amazing how some user won't help to solve the problem they report on forums.
Your polishing work is deeply appreciated :)

thank you for believing me without other users reporting. It's amazing how some user won't help to solve the problem they report on forums. Your polishing work is deeply appreciated :)

@bliblubli, its fine, we do believe reports, there just ends up being many issues we can't redo.

@bliblubli, its fine, we _do_ believe reports, there just ends up being many issues we can't redo.

This issue was referenced by f526f410b2

This issue was referenced by f526f410b29202c2994e99dc22266fc0f3fdc0db
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45059
No description provided.