Fix T45059: Image open /w relative paths & anim

- would hang on win32 (checking network share?)
- made the path absolute on all systems